--- a/ImplicitShowHideAnimationBug/MainPage.xaml
+++ b/ImplicitShowHideAnimationBug/MainPage.xaml
@@ -6,8 +6,25 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
+    <Page.Resources>
+        <DataTemplate x:Key="GroupTemplate">
+            <Grid Height="110" Width="480" Margin="10" Loaded="Grid_Loaded">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+                <Border Background="{StaticResource ListViewItemPlaceholderBackgroundThemeBrush}" Width="110" Height="110">
+                    <Image Source="{Binding Property3}" Height="110" Width="110"/>
+                </Border>
+                <StackPanel Grid.Column="1" Margin="10,0,0,0">
+                    <TextBlock Text="{Binding Property1}" Style="{StaticResource TitleTextBlockStyle}"/>
+                    <TextBlock Text="{Binding Property2}" Style="{StaticResource CaptionTextBlockStyle}" TextWrapping="NoWrap"/>
+                </StackPanel>
+            </Grid>
+        </DataTemplate>
+    </Page.Resources>
 
-    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-
+    <Grid DataContext="{Binding Source={StaticResource SampleDataSource}}">
+        <ListView ItemTemplate="{StaticResource GroupTemplate}" ItemsSource="{Binding Groups}" />
     </Grid>
 </Page>
